# cuda-debayer

./: .gitignore  Makefile.am  NEWS  Readme.md  autogen.sh  configure.ac
include/: bayer2rgb.h  camera_device.h  gl_display.h
m4/: ax_check_cuda.m4  ax_prog_nvcc.m4
src/: Makefile.am  bayer2rgb.cu  bayer2rgb_kernel.h  camera_device.cpp  gl_display.cpp
tests/: Makefile.am  check_cuda_kernel.cu  cuda_kernel_test_data.h
